--- a/package.json
+++ b/package.json
@@ -184,10 +184,14 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
+    "bluebird": "^3.5.0",
     "electron-debug": "^1.1.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "font-awesome": "^4.7.0",
+    "fs-extra": "^2.1.2",
+    "glob": "^7.1.1",
     "history": "^4.6.1",
+    "ramda": "^0.23.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-hot-loader": "3.0.0-beta.6",
