--- a/package.json
+++ b/package.json
@@ -193,6 +193,7 @@
     "history": "^4.6.1",
     "ramda": "^0.23.0",
     "react": "^15.5.4",
+    "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
     "react-hot-loader": "3.0.0-beta.6",
     "react-redux": "^5.0.4",
