--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "Katalogz",
-  "productName": "ElectronReact",
-  "version": "0.11.0",
-  "description": "Electron application boilerplate based on React, React Router, Webpack, React Hot Loader for rapid application development",
+  "productName": "Katalogz",
+  "version": "1.0.0",
+  "description": "File copy software",
   "main": "main.js",
   "scripts": {
     "test": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 node --trace-warnings ./test/runTests.js",
@@ -32,7 +32,7 @@
   },
   "browserslist": "electron 1.4",
   "build": {
-    "productName": "ElectronReact",
+    "productName": "Katalogz",
     "appId": "org.develar.ElectronReact",
     "files": [
       "dist/",
@@ -74,29 +74,25 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/chentsulin/electron-react-boilerplate.git"
+    "url": "git+https://github.com/lhache/katalogz.git"
   },
   "author": {
-    "name": "C. T. Lin",
-    "email": "chentsulin@gmail.com",
-    "url": "https://github.com/chentsulin"
+    "name": "Louis Hache",
+    "email": "hache.louis.dev@gmail.com",
+    "url": "https://github.com/lhache"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/chentsulin/electron-react-boilerplate/issues"
+    "url": "https://github.com/lhache/katalogz/issues"
   },
   "keywords": [
     "electron",
-    "boilerplate",
     "react",
     "redux",
-    "flow",
-    "sass",
     "webpack",
-    "hot",
-    "reload"
+    "node"
   ],
-  "homepage": "https://github.com/chentsulin/electron-react-boilerplate#readme",
+  "homepage": "https://github.com/lhache/katalogz#readme",
   "jest": {
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/mocks/fileMock.js",
